--- a/exo-Ludo/exo4/index.html
+++ b/exo-Ludo/exo4/index.html
@@ -11,11 +11,23 @@
 
         <tbody>
             <tr>
-                <td scope="row">couleur de fond (rgb)</td>
+                <td scope="row">couleur de fond (b)</td>
                 <td><input type="range" name="" id="rgbRange" value="0" min="0" max="255" oninput="this.nextElementSibling.value = this.value">
                 <output class="rgb">0</output></td>
-                <td class="contain" rowspan="6">
+                <td class="contain" rowspan="8">
                     <h1>Titre de test</h1>
+                </td>
+            </tr>
+            <tr>
+                <td scope="row">couleur de fond (g)</td>
+                <td><input type="range" name="" id="rgbRange1" value="0" min="0" max="255" oninput="this.nextElementSibling.value = this.value">
+                <output class="rgb1">0</output>
+                </td>
+            </tr>
+            <tr>
+                <td scope="row">couleur de fond (r)</td>
+                <td><input type="range" name="" id="rgbRange2" value="0" min="0" max="255" oninput="this.nextElementSibling.value = this.value">
+                <output class="rgb2">0</output>
                 </td>
             </tr>
             <tr>
